# zephyr-on-esp32

./: README.md
adc_demo/: CMakeLists.txt
adc_demo/boards/: esp32_devkitc_wroom.overlay
adc_demo/src/: main.c
blink_led_pt1/: CMakeLists.txt  prj.conf
blink_led_pt1/src/: main.c
blink_led_pt2/: CMakeLists.txt  README.md
blink_led_pt2/boards/: esp32_devkitc_wroom.overlay
blink_led_pt2/src/: main.c
button_isr/: CMakeLists.txt
button_isr/boards/: esp32_devkitc_wroom.overlay
button_isr/src/: main.c
button_polling/: CMakeLists.txt  README.md
button_polling/boards/: esp32_devkitc_wroom.overlay
button_polling/src/: main.c
cmake_demo/: CMakeLists.txt  prj.conf
cmake_demo/boards/: esp32_devkitc_wroom.conf
cmake_demo/lib/say_hello/: CMakeLists.txt
cmake_demo/lib/say_hello/src/: say_hello.c
cmake_demo/src/: main.c
hello_world/: CMakeLists.txt  prj.conf
hello_world/src/: main.c
kconfig_demo/: CMakeLists.txt
kconfig_demo/boards/: esp32_devkitc_wroom.conf
kconfig_demo/src/: main.c
modules/say_hello/: CMakeLists.txt  Kconfig  say_hello.c
